# ezlanguage

./: .directory  .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  README.md  README_fr.md  build.sh  compteRendu.md  makefile  nano.save.1
Tests/: README.TXT  main_for_1.ez  main_if.ez  main_if_else.ez  main_operateurs_soustraction.ez  main_print.ez  main_read_print.ez  main_repeat.ez  main_when.ez  program_with_arguments.ez
architecture/: Objectifs.md  Options de compilateur.docx  Rapport seconde réunion avec JMR.md  Répartition et Organisation du groupe architecture.md
color_schemes/: README.md  README_fr.md  exemple.ez  exemple.ezl
compilation/: Doc table symbole.odt  FonctionnementducompilateurEZlanguage.md  Objectifs.md
doc/: Ajoutspossiblespourlesoptionsdecompilation.odt  Options de compilateur.odt  README.md  README_fr.md  options_compilateur
docs/: README.md  doc-compilateur-ENG.md  doc-compilateur-FR.md
examples/: README.md  README_fr.md  affectations_calculs.ezl  all_tests.sh  empty_program.ez  example.ez  exemple.ez  fichier_de_test.ezl  julia.ez  other_tests.sh  person.ez  test_class.ez  unvalid_tests.sh  valid_tests.sh
latex/: md_README.tex  md_README_fr.tex  refman.tex
organisation/: Objectifs.md
presentation/: GIT.pptx
src/: .EZ_language_compiler.lex.swp  .EZ_language_compiler_BASE_7786.lex.swp  .EZ_language_compiler_LOCAL_7786.lex.swp  .EZ_language_compiler_REMOTE_7786.lex.swp  EZ_language_compiler.lex  EZ_language_compiler.output  README.md  (+17 more)
tests/cppunit/: Makefile.am  TesterRunner.cpp  arraytest.cpp  arraytest.h  configure.ac
(+440 files in other folders)
